--- a/WebContent/demo/order_heat_demo.html
+++ b/WebContent/demo/order_heat_demo.html
@@ -751,7 +751,7 @@ function getTypeOption(){
 function showHeat(){
 	var cityoptions=$("#cityName option:selected");
 	cityId = cityoptions.val();
-	cityName = cityoptions.text();
+	cityName = "天津";//cityoptions.text();
 	var typeoptions = $("#type option:selected");
 	type = typeoptions.val();
 	var storeoptions = $("#storeName option:selected");
