--- a/WebContent/demo/store_cover_view_demo.html
+++ b/WebContent/demo/store_cover_view_demo.html
@@ -311,7 +311,7 @@ var vallagePolygon;
 var areaPolygon;
 function draw(){
 	//画服务范围多边形
-	servicePolygon = servicePolygon = new AMap.Polygon({
+	servicePolygon = new AMap.Polygon({
 	       strokeColor: "#5c69cc", //线颜色
 	       strokeOpacity: 0.9, //线透明度
 	       strokeWeight: 2,    //线宽
